# openai-ocaml

./: .env  .envrc  CHANGELOG  LICENSE  README.md  dune-project  flake.nix  openai.opam
.github/workflows/: ci.yml  release.yml
nix/: ocamlformat.nix
src/: audio_transcription.ml  audio_translation.ml  basic.ml  chat_completion.ml  client.ml  completion.ml  dune  edit.ml  embedding.ml  image_generation.ml  image_variation.ml  json.ml  main.ml  test.ml
