opam-version: "2.0"
synopsis: "OCaml OpenAI binding"
maintainer: ["Satoru Kawahara <s1311350@gmail.com>"]
authors: ["Satoru Kawahara <s1311350@gmail.com>"]
license: "MIT"
homepage: "https://github.com/Nymphium/openai-ocaml"
bug-reports: "https://github.com/Nymphium/openai-ocaml/issues"
dev-repo: "git+https://github.com/Nymphium/openai-ocaml.git"
depends: [
  "ocaml" {>= "4.14.0"}
  "dune" {>= "3.7.0"}
  "ppx_yojson"
  "ppx_yojson_conv"
  "lwt_ppx"
  "conf-openssl"
  "ezcurl-lwt"
]

build: ["dune" "build" "-j" jobs "-p" name]
